# python-django

./: dockerfile.pipenv  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_meet_time_blog_space_alter_blog_content_and_more.py
sample/: settings.py  urls.py
static/css/: details.css  home.css  input.css  login.css
templates/: blog_add.html  blog_detail.html  blog_list.html  delete.html  index.html  update.html
templates/users/: login.html  logout.html  signup.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
